# DJIDockSimulator

./: CMakeLists.txt  README.md
src/: main.cpp
src/autopilot/: autopilot.h  mission.h  movement_emulator.cpp  movement_emulator.h
src/util/: geo.h  geo_json.h  math.cpp  math.h  obj_to_string.h  synchonized.h  types.h
tools/: build.sh
